--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/x-icon" href="/ts_icon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portal Proveedores</title>
+  <title>Login proveedores </title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 
 <body>
